<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/training_card"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#E6A2C071">

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/distance_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/speedValue"
            app:layout_constraintStart_toStartOf="@+id/speedValue" />

        <TextView
            android:id="@+id/speedLabel"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/speed_CI"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/speedValue"
            app:layout_constraintStart_toEndOf="@+id/speedValue" />

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/distance_km_label"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/distanceValue"
            app:layout_constraintStart_toEndOf="@+id/distanceValue" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/speed_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/timeValue"
            app:layout_constraintStart_toStartOf="@+id/timeValue" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/time_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
