<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/training_card"
    android:layout_width="330dp"
    android:layout_height="190dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="20dp">

    <fragment
        android:id="@+id/miniMap1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginBottom="-30dp"
        tools:context=".MapsActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="155dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#E6FFFFFF" >

        <TextView
            android:id="@+id/trainingDistance1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/distance_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/trainingAvgSpeed1"
            app:layout_constraintStart_toStartOf="@+id/trainingAvgSpeed1" />

        <TextView
            android:id="@+id/speedLabel1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/speed_CI"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/trainingAvgSpeed1"
            app:layout_constraintStart_toEndOf="@+id/trainingAvgSpeed1" />

        <TextView
            android:id="@+id/distanceLabel2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/distance_km_label"
            android:textColor="#777777"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/trainingDistance1"
            app:layout_constraintStart_toEndOf="@+id/trainingDistance1" />

        <TextView
            android:id="@+id/trainingAvgSpeed1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/speed_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/trainingTime1"
            app:layout_constraintStart_toStartOf="@+id/trainingTime1" />

        <TextView
            android:id="@+id/trainingTime1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/time_empty_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>