<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainMap"
    tools:context=".Activity.CompletedTracks.CompletedTracksActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/back_button"
        android:onClick="clickBackButton"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/statisticsButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/statistics_button"
        android:src="@drawable/ic_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completedTracksText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/completedTracks"
        android:textColor="@color/colorDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tracksList"
        app:layout_constraintEnd_toStartOf="@+id/statisticsButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chauthai.overscroll.RecyclerViewBouncy
        android:id="@+id/tracksList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <ImageView
        android:id="@+id/imageTopGradient"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:src="@drawable/gradient_top_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tracksList" />

    <ImageView
        android:id="@+id/imageBottomGradient"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:src="@drawable/gradient_bottom_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/tracksList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
